Make sure that the filename for temporary tables is built with fn_format() so that extra slashes are handled in tmpdir. (Bug #8497)